--- a/atividade web 25-03/styles.css
+++ b/atividade web 25-03/styles.css
@@ -1,13 +1,105 @@
-/*Seletor universal*/
-*{
-    margin-left: 0px;
-    margin-right: 0px;
-    font-family: Arial, Helvetica, sans-serif;
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: poppins
 }
 
-.colunas {
-    display: block;
-    columns: 2 20px; /* Divide o conteúdo em 2 colunas com 20px de espaço entre elas */
-    text-align: justify; /* Justifica o texto para alinhamento uniforme */
-    column-rule: 1px solid #ccc; /* Adiciona uma linha divisória entre as colunas */
+img {
+    max-width: 50%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    animation: animacaoImagem 4s infinite;
+}
+
+@keyframes animacaoImagem {
+    0% {
+        transform: scale(1);
+        opacity: 1;
+    }
+    50% {
+        transform: scale(1.2);
+        opacity: 0.8;
+    }
+    100% {
+        transform: scale(1);
+        opacity: 1;
+    }
+}
+
+header {
+    background-color: #333;
+    padding: 10px 0;
+}
+
+h1 {
+    font-size: 25px;
+}
+
+h2 {
+    font-size: 16px;
+}
+
+.navbar ul {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    gap: 20px; 
+}
+
+.navbar ul li {
+    margin: 0;
+}
+
+.navbar ul li a {
+    text-decoration: none;
+    color: rgb(255, 253, 253);
+    padding: 10px 15px;
+    transition: background-color 0.3s;
+}
+
+.navbar ul li a:hover {
+    background-color: #666464;
+    border-radius: 5px;
+}
+
+main {
+    padding: 20px;
+}
+
+.linha-conteudo {
+    display: flex; 
+    gap: 20px; 
+    margin-bottom: 20px;
+}
+
+.coluna {
+    flex: 1; 
+    padding: 15px;
+    background-color: #6d6c72;
+    border: 1px solid #ddd;
+    text-align: center;
+}
+
+.linha-unica {
+    margin-top: 20px;
+}
+
+.coluna-unica {
+    background-color: #f4f4f4;
+    padding: 15px;
+    border: 1px solid #ddd;
+    text-align: center;
+}
+
+footer {
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 10px 0;
+    margin-top: 270px;
 }
