--- a/atividade web 01-04/atividade/styles1.css
+++ b/atividade web 01-04/atividade/styles1.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap');
 
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
     text-align: center;
-    font-family: Poppins;
+    font-family: Poppins, sans-serif;
 }
 
 body {
@@ -28,13 +28,26 @@ body {
     list-style-type: none;
 }
 
+.colunas {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10px;
+}
+
+.colunas ul {
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+}
+
 .colunas ul li {
     background-color: #AFBFC0;
-    margin: 10px 0;
-    text-align: center;
+    margin: 10px;
     font-weight: bolder;
     border-radius: 3px;
-    padding: 5px;
+    padding: 10px;
+    flex: 1 1 calc(25% - 20px); 
 }
 
 .colunas ul li:hover {
@@ -45,8 +58,7 @@ body {
 
 .aside {
     background-color: #AFBFC0;
-    text-align: center;
-    padding: 5px;
+    padding: 15px;
     color: aliceblue;
 }
 
@@ -56,25 +68,11 @@ body {
 
 .footer {
     width: 100%;
-    height: 10px;
+    padding: 10px;
     text-align: center;
-}
-.colunas{
-    display: flexbox;
-    justify-items: center;
-    
-}
-.main {
-    overflow: hidden;
+    background-color: #9FA4A9;
 }
 
-.row::after {
-    content: "";
-    clear: both;
-    display: table;
-}
-
-/* Smartphone */
 [class*="col-"] {
     width: 100%;
     float: left;
